<resources>
    <string name="app_name">cccandroidtest</string>

    <string name="something_went_wrong">Something went wrong</string>
    <string name="est_details">Est. Details</string>

    <string name="est_numbers">Est. Numbers</string>
    <string name="created">Created</string>
    <string name="requester">Requester</string>
    <string name="revision_number">Revision Number</string>
    <string name="created_by">Created By </string>
    <string name="contact">Contact</string>
</resources>